src/test/deca/context/invalid/logic/identInt-bool.deca
// Programme testant la comparaison de booléen avec un int

{
    int i = 0;
    boolean b = true;
    if (i > b) {}
}